# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.482 2005/11/13 22:47:00 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  13 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  add -h option to usage()
  show time and request URI in debug mode
  show client IP in debug mode
  just use IP instead of trying to do a reverse lookup

  12 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  'classier' 401 message
  proper commandline parsing
  help via -h
  user/pass can be specificed via commandline option

  11 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  basic HTTP auth

  10 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  dynamic module reloading (yipee!)
  send 'Last-Modified' header for real files
  respond to HEAD with just headers
  src/net/server/handlers/WebGLIHandler.py:
  icons for drives

  7 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/handlers/WebGLIHandler.py:
  initial 'pretty' partition table display support
  clicking partition in 'pretty' display works instead of radio buttons
  radio buttons and pretty display work together
  META redirect instead of javascript
  pretty display stretches across entire screen
  'Recommended layout' and 'Clear drive' functions
  properly catch exceptions from do_recommended()
  src/GLIArchitectureTemplate.py:
  replace preinst, copy, postinst, rm steps with qmerge
  whoops...that shouldn't have been commented out
  create image_dir with -p in copy_pkg_to_chroot()
  more generic of symlink crappiness
  new copy_pkg_to_chroot() actually works now

  6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  initial generic disk support
  fixes for add_partition() code
  src/net/server/handlers/WebGLIHandler.py:
  added support for creating generic disks
  add new partition working