@@ -12,24 +12,25 @@
 		<td>&nbsp;</td>
 	</tr>
 	<tr>
-		<td valign="top"><p><a href="/webgli">Welcome</a></p>
-			<p><a href="/webgli/ClientConfig">Client Config</a></p>
-			<p><a href="/webgli/Partitioning">Partitioning</a></p>
-			<p><a href="/webgli/NetworkMounts">Network Mounts</a></p>
-			<p><a href="/webgli/StageSelection">Stage Selection</a></p>
-			<p><a href="/webgli/PortageTree">Portage Tree</a></p>
-			<p><a href="/webgli/GlobalUSE">Global USE Flags</a></p>
-			<p><a href="/webgli/LocalUSE">Local USE Flags</a></p>
-			<p><a href="/webgli/ConfigFiles">Config Files</a></p>
-			<p><a href="/webgli/Kernel">Kernel</a></p>
-			<p><a href="/webgli/Bootloader">Bootloader</a></p>
-			<p><a href="/webgli/Timezone">Timezone</a></p>
-			<p><a href="/webgli/Networking">Networking</a></p>
-			<p><a href="/webgli/Daemons">Daemons</a></p>
-			<p><a href="/webgli/ExtraPackages">Extra Packages</a></p>
-			<p><a href="/webgli/Services">Services</a></p>
-			<p><a href="/webgli/Users">Users</a></p>
-			<p><a href="/webgli/Review">Review</a></p>
+		<td valign="top"><p><a href="/webgli">Welcome</a>
+			<br><a href="/webgli/ClientConfig">Client Config</a>
+			<br><a href="/webgli/Partitioning">Partitioning</a>
+			<br><a href="/webgli/NetworkMounts">Network Mounts</a>
+			<br><a href="/webgli/StageSelection">Stage Selection</a>
+			<br></br><a href="/webgli/PortageTree">Portage Tree</a>
+			<br><a href="/webgli/GlobalUSE">Global USE Flags</a>
+			<br><a href="/webgli/LocalUSE">Local USE Flags</a>
+			<br><a href="/webgli/MakeDotConf">Make.conf</a>
+			<br><a href="/webgli/ConfigFiles">Config Files</a>
+			<br><a href="/webgli/Kernel">Kernel</a>
+			<br><a href="/webgli/Bootloader">Bootloader</a>
+			<br><a href="/webgli/Timezone">Timezone</a>
+			<br><a href="/webgli/Networking">Networking</a>
+			<br><a href="/webgli/Daemons">Daemons</a>
+			<br><a href="/webgli/ExtraPackages">Extra Packages</a>
+			<br><a href="/webgli/Services">Services</a>
+			<br><a href="/webgli/Users">Users</a>
+			<br><a href="/webgli/Review">Review</a>
 			<br>
 			<p><a href="/webgli/saveprofile">Save Profile</a></p>
 			<p><a href="/webgli/loadprofile">Load Profile</a></p>
