@@ -1,10 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.482 2005/11/13 22:47:00 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.483 2005/11/14 03:19:07 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
+  13 Nov 2005; Preston Cody <codeman@gentoo.org>
+  removed protocols from rc.conf screens
+  finished initial rc.conf and make.conf in webgli
+  
   13 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
   add -h option to usage()
